add aba profife em index, correcos visuais em view profile, modificado enigmas pelos escritos a mao, correcao dos dados da api, correcao do erro da funcao que fazia o banco incluir egistros a cada requisicao

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,9 +10,9 @@
     <li><a href="/auth/registrar"><i class="bi bi-person-plus"></i> Registrar</a></li>
     <li><a href="/enigma/facil/2"><i class="bi bi-question-circle"></i> Enigmas</a></li>
     <li><a href="/contato"><i class="bi bi-envelope"></i> Contato</a></li>
+    <li><a href="/profile"><i class="bi bi-person-circle"></i> Seu Perfil</a></li>
   </ul>
 </nav>
-
 
 <div class="container mt-4">
   <div class="row">
