--- a/views/enigmas.hbs
+++ b/views/enigmas.hbs
@@ -10,6 +10,7 @@
     <li><a href="/auth/registrar"><i class="bi bi-person-plus"></i> Registrar</a></li>
     <li><a href="/enigma/facil/2"><i class="bi bi-question-circle"></i> Enigmas</a></li>
     <li><a href="/contato"><i class="bi bi-envelope"></i> Contato</a></li>
+    <li><a href="/profile"><i class="bi bi-person-circle"></i> Seu Perfil</a></li>
   </ul>
 </nav>
 
