--- a/views/index.hbs
+++ b/views/index.hbs
@@ -286,6 +286,18 @@
     </div>
   </div>
 </div>
+<div class="card bg-dark text-light shadow-lg border-light mt-5 " style="max-width: 500px; margin: auto;">
+  <div class="card-body text-center">
+    <h4 class="card-title">Desafie sua mente</h4>
+    <p class="card-text">
+      Explore nossa coleção completa de enigmas e teste sua habilidade de decifrar mistérios.
+    </p>
+    <a href="/enigma/mostrar" class="btn btn-outline-light btn-lg">
+      <i class="bi bi-lightbulb"></i> Veja todos os nossos enigmas
+    </a>
+  </div>
+</div>
+
 <footer class="bg-dark text-white text-center py-4 mt-5">
   <div class="container">
     <h5 class="mb-3">Use os nossos serviços</h5>
